planapp/appstyle.css
/* ... */
@media screen and (max-width: 1000px) {
  body {
    align-items: flex-start;
    justify-content: flex-start;
    padding-bottom: 0;
    min-height: 100vh;

  }
  .container {
    min-height: 93vh;
    flex-direction: column;
    border-radius: 0;
  }
  .container .left {
    width: 100%;
    height: 100%;
    padding: 20px 0;
  }
  .container .right {
    width: 100%;
    height: 100%;
    padding: 20px 0;
  }
  .calendar::before,
  .calendar::after {
    top: 100%;
    left: 50%;
    width: 97%;
    height: 12px;
    border-radius: 0 0 5px 5px;
    transform: translateX(-50%);
  }
  .calendar::before {
    width: 94%;
    top: calc(100% + 12px);
  }
  .events {
    padding-bottom: 340px;
  }
  .add-event-wrapper {
    bottom: 100px;
  }
  nav.static {
    width: 100vw !important;
  }
  .menu-items {
    transform: translate(-100vw);
  }
  .nav-container input[type="checkbox"]:checked ~ .menu-items {
    transform: translate(0) !important;
  }
}
@media screen and (max-width: 500px) {
  .calendar .month {
    height: 75px;
  }
  .calendar .weekdays {
    height: 50px;
  }
  .calendar .days .day {
    height: 40px;
    font-size: 0.8rem;
  }
  .calendar .days .day.active,
  .calendar .days .day.today {
    font-size: 1rem;
  }
  .right .today-date {
    padding: 20px;
  }
  h1{
    font-size: x-large !important;
  }
}

.credits {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
  padding: 10px;
  font-size: 12px;
  color: #fff;
  background-color: #b38add;
}
.credits a {
  color: #fff;
  text-decoration: none;
  font-weight: 600;
}
.credits a:hover {
  text-decoration: underline;
}


nav.static {
  height: 7vh;
  position: relative;
  top: 5px;
  width: 80vw;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 1vh 2vw;
  margin: 0 auto;
  background-color: rgba(245, 243, 244, 0.9);
  backdrop-filter: blur(10px);
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  border-radius: 10px;
  margin-bottom: 20px;
}

.width-33{
  width: 33.33%;
}

.logoimg{
  position: relative;
  height: 50px;
  left: 10px;
  display: block;
}

.burgermenu {
  width: 33%;
}

.nav-container {
  justify-content: flex-end;
  align-items: center;
}

.burgermenu.nav-container{
  display: flex;
}

.menu-items {
  display: flex;
}

.nav-container li {
  list-style: none;
}

.nav-container a {
  text-decoration: none;
  font-weight: 500;
  font-size: 1.2rem;
  padding: 0.7rem;
}

.nav-container a:hover{
    font-weight: bolder;
}

.nav-container {
  display: block;
  position: relative;
  height: 60px;
}

.nav-container .checkbox {
  position: absolute;
  display: block;
  height: 32px;
  width: 32px;
  right: 20px;
  z-index: 5;
  opacity: 0;
  cursor: pointer;
}

.nav-container .hamburger-lines {
  display: block;
  height: 26px;
  width: 32px;
  position: absolute;
  right: 20px;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.nav-container .hamburger-lines .line {
  display: block;
  height: 4px;
  width: 100%;
  border-radius: 10px;
  background: #0e2431;
}

.nav-container .hamburger-lines .line1 {
  transform-origin: 0% 0%;
  transition: transform 0.4s ease-in-out;
}

.nav-container .hamburger-lines .line2 {
  transition: transform 0.2s ease-in-out;
}

.nav-container .hamburger-lines .line3 {
  transform-origin: 0% 100%;
  transition: transform 0.4s ease-in-out;
}

.menu-items {
  position: fixed;
  padding-top: 20vh;
  background-color: var(--color-light-grey);
  height: 100vh;
  width: 100vw;
  top:0;
  left: 0;
  transform: translate(-110vw);
  transform: translateZ(90);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  transition: transform 0.4s ease-in-out;
  overflow: hidden;
}

.menu-items li {
  margin-bottom: 2.2rem;
}

.loginbutton{
  background-color: var(--color-pink-2);
  color: var(--color-white);
  padding: 10px 13px 10px 15px;
  text-decoration: none;
  border-radius: 10px;
  margin-right: 10px;
  white-space: nowrap;
}

.loginbutton:hover{
  background-color: var(--color-pink-1);
  color: var(--color-white);
}

.signupbutton{
  background-color: var(--color-red-2);
  color: var(--color-white);
  padding: 10px 13px 10px 15px;
  text-decoration: none;
  border-radius: 50px;
  white-space: nowrap;
}

.signupbutton:hover{
  background-color: var(--color-red-4);
}

.menu-items li {
  .loginbutton{
      margin-right:auto;
  }
  .signupbutton{
      margin-left:auto;
  }
}

.nav-container input[type="checkbox"]:checked ~ .menu-items {
  transform: translate(-10vw);
}
nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container,
nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .left,
nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .right,
nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .add-event-btn{ 
  display: none !important;
}
.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
  transform: rotate(45deg);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
  transform: scaleY(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
  transform: rotate(-45deg);
}

h1 {
  font-family: 'Julius Sans One', sans-serif;
  font-size: xx-large;
  color: var(--color-black-1);
  text-align: center;
  strong{
      color: var(--color-red-1);
  }
}

